// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders consistently 1`] = `
.c0 {
  border-radius: 6px;
  border: 1px solid;
  border-color: rgba(27,31,36,0.15);
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: grid;
  grid-template-areas: "leadingIcon text trailingIcon";
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: #24292f;
  background-color: #f6f8fa;
  box-shadow: 0 1px 0 rgba(27,31,36,0.04),inset 0 1px 0 rgba(255,255,255,0.25);
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
  color: #8c959f;
  background-color: btn.disabledBg;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0 > :not(:last-child) {
  margin-right: 8px;
}

.c0 [data-component="leadingIcon"] {
  grid-area: leadingIcon;
}

.c0 [data-component="text"] {
  grid-area: text;
}

.c0 [data-component="trailingIcon"] {
  grid-area: trailingIcon;
}

.c0 [data-component="ButtonCounter"] {
  font-size: 14px;
}

.c0:hover:not([disabled]) {
  background-color: #f3f4f6;
}

.c0:focus:not([disabled]) {
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c0:active:not([disabled]) {
  background-color: hsla(220,14%,93%,1);
  border-color: rgba(27,31,36,0.15);
}

.c0[aria-expanded=true] {
  background-color: hsla(220,14%,93%,1);
  border-color: rgba(27,31,36,0.15);
}

<button
  className="c0"
/>
`;

exports[`Button styles danger button appropriately 1`] = `
.c0 {
  border-radius: 2;
  border: 1px solid;
  font-family: inherit;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: grid;
  grid-template-areas: "leadingIcon text trailingIcon";
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: btn.danger.text;
  background-color: btn.bg;
  box-shadow: undefined;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
  color: btn.danger.disabledText;
  background-color: btn.danger.disabledBg;
  border-color: btn.danger.disabledBorder;
}

.c0:disabled [data-component="ButtonCounter"] {
  background-color: btn.danger.disabledCounterBg;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0 > :not(:last-child) {
  margin-right: 8px;
}

.c0 [data-component="leadingIcon"] {
  grid-area: leadingIcon;
}

.c0 [data-component="text"] {
  grid-area: text;
}

.c0 [data-component="trailingIcon"] {
  grid-area: trailingIcon;
}

.c0 [data-component="ButtonCounter"] {
  font-size: 14px;
  color: btn.danger.text;
  background-color: btn.danger.counterBg;
}

.c0:hover:not([disabled]) {
  color: btn.danger.hoverText;
  background-color: btn.danger.hoverBg;
  border-color: btn.danger.hoverBorder;
  box-shadow: undefined;
}

.c0:hover:not([disabled]) [data-component="ButtonCounter"] {
  background-color: btn.danger.hoverCounterBg;
  color: btn.danger.hoverText;
}

.c0:focus:not([disabled]) {
  border-color: btn.danger.focusBorder;
  box-shadow: undefined;
}

.c0:active:not([disabled]) {
  color: btn.danger.selectedText;
  background-color: btn.danger.selectedBg;
  box-shadow: undefined;
  border-color: btn.danger.selectedBorder;
}

.c0[aria-expanded=true] {
  color: btn.danger.selectedText;
  background-color: btn.danger.selectedBg;
  box-shadow: undefined;
  border-color: btn.danger.selectedBorder;
}

<button
  class="c0"
>
  <span
    data-component="text"
  >
    Danger
  </span>
</button>
`;

exports[`Button styles invisible button appropriately 1`] = `
.c0 {
  border-radius: 2;
  border: 0;
  font-family: inherit;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: grid;
  grid-template-areas: "leadingIcon text trailingIcon";
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: accent.fg;
  background-color: transparent;
  box-shadow: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
  color: primer.fg.disabled;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0 > :not(:last-child) {
  margin-right: 8px;
}

.c0 [data-component="leadingIcon"] {
  grid-area: leadingIcon;
}

.c0 [data-component="text"] {
  grid-area: text;
}

.c0 [data-component="trailingIcon"] {
  grid-area: trailingIcon;
}

.c0 [data-component="ButtonCounter"] {
  font-size: 14px;
}

.c0:hover:not([disabled]) {
  background-color: btn.hoverBg;
}

.c0:focus:not([disabled]) {
  box-shadow: undefined;
}

.c0:active:not([disabled]) {
  background-color: btn.selectedBg;
}

.c0[aria-expanded=true] {
  background-color: btn.selectedBg;
}

<button
  class="c0"
>
  <span
    data-component="text"
  >
    Invisible
  </span>
</button>
`;

exports[`Button styles outline button appropriately 1`] = `
.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: btn.border;
  font-family: inherit;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: grid;
  grid-template-areas: "leadingIcon text trailingIcon";
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: btn.outline.text;
  box-shadow: undefined;
  background-color: btn.bg;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
  color: btn.outline.disabledText;
  background-color: btn.outline.disabledBg;
  border-color: btn.border;
}

.c0:disabled [data-component="ButtonCounter"] {
  background-color: btn.outline.disabledCounterBg;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0 > :not(:last-child) {
  margin-right: 8px;
}

.c0 [data-component="leadingIcon"] {
  grid-area: leadingIcon;
}

.c0 [data-component="text"] {
  grid-area: text;
}

.c0 [data-component="trailingIcon"] {
  grid-area: trailingIcon;
}

.c0 [data-component="ButtonCounter"] {
  font-size: 14px;
  background-color: btn.outline.counterBg;
  color: btn.outline.text;
}

.c0:hover:not([disabled]) {
  color: btn.outline.hoverText;
  background-color: btn.outline.hoverBg;
  border-color: outline.hoverBorder;
  box-shadow: undefined;
}

.c0:hover:not([disabled]) [data-component="ButtonCounter"] {
  background-color: btn.outline.hoverCounterBg;
  color: btn.outline.hoverText;
}

.c0:focus:not([disabled]) {
  border-color: btn.outline.focusBorder;
  box-shadow: undefined;
}

.c0:active:not([disabled]) {
  color: btn.outline.selectedText;
  background-color: btn.outline.selectedBg;
  box-shadow: undefined;
  border-color: btn.outline.selectedBorder;
}

.c0[aria-expanded=true] {
  color: btn.outline.selectedText;
  background-color: btn.outline.selectedBg;
  box-shadow: undefined;
  border-color: btn.outline.selectedBorder;
}

<button
  class="c0"
>
  <span
    data-component="text"
  >
    Outline
  </span>
</button>
`;

exports[`Button styles primary button appropriately 1`] = `
.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: border.subtle;
  font-family: inherit;
  font-weight: bold;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: grid;
  grid-template-areas: "leadingIcon text trailingIcon";
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: btn.primary.text;
  background-color: btn.primary.bg;
  box-shadow: undefined;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
  color: btn.primary.disabledText;
  background-color: btn.primary.disabledBg;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0 > :not(:last-child) {
  margin-right: 8px;
}

.c0 [data-component="leadingIcon"] {
  grid-area: leadingIcon;
}

.c0 [data-component="text"] {
  grid-area: text;
}

.c0 [data-component="trailingIcon"] {
  grid-area: trailingIcon;
}

.c0 [data-component="ButtonCounter"] {
  font-size: 14px;
  background-color: btn.primary.counterBg;
  color: btn.primary.text;
}

.c0:hover:not([disabled]) {
  color: btn.primary.hoverText;
  background-color: btn.primary.hoverBg;
}

.c0:focus:not([disabled]) {
  box-shadow: undefined;
}

.c0:active:not([disabled]) {
  background-color: btn.primary.selectedBg;
  box-shadow: undefined;
}

.c0[aria-expanded=true] {
  background-color: btn.primary.selectedBg;
  box-shadow: undefined;
}

<button
  class="c0"
>
  <span
    data-component="text"
  >
    Primary
  </span>
</button>
`;
